<resources>
    <string name="app_name">Quran Khmer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="surah_fragment_label">Surah</string>
    <string name="surah_content_fragment_label">Surah</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="menu_bookmark">Bookmarks</string>
    <string name="menu_help">Help And Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share App</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_more">More App</string>
    <string name="menu_other_options">Other</string>
    <string name="menu_settings">Settings</string>
    <string name="quran_translate_to_khmer">Quran translate to Khmer</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="search_here">Search here</string>
    <string name="copied_text">Copied Text</string>
    <string name="share_via">Share via</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="zoom_in">Zoom In</string>
    <string name="clear_all">Clear All</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="khmer">Khmer</string>
    <string name="arabic">Arabic</string>
    <string name="confirm_clear_all">Confirm clear all</string>
    <string name="are_you_sure_clear_all">Are you sure clear all?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="enter_message">Enter your message</string>
    <string name="send">Send</string>
    <string name="about">About</string>
    <string name="app_name_khmer">Quran Khmer</string>
    <string name="quran_text1">Quran Khmer</string>
    <string name="version">Version 14.0</string>
    <string name="app_feature">App Feature</string>
    <string name="quran_translate">Quran Translate by CMCD (Ahmad Yahya)</string>
    <string name="quran_search">2 in 1 Quran search</string>
    <string name="total_surahs">Total Surah :114</string>
    <string name="total_ayat">Total Ayat :6236</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Designed and Developed by Sout Rahim</string>
    <string name="developer_email">Email: sout.rahim@gmail.com</string>
    <string name="developer_facebook">Facebook: Sout Rahim</string>
    <string name="contact_associate">Contact Associate</string>
    <string name="contact_email">Email: quraan.cambodia@gmail.com</string>
    <string name="copyright">Copyright © 2016-2025</string>
    <string name="section_surahs">Surahs</string>
    <string name="section_ayahs">Ayahs</string>

</resources>