<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurfaceContainer"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="24dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:clipToOutline="true"
        android:contentDescription="Profile image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_app" />

    <!-- Header Title -->
    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?attr/colorOnSurface" />

    <!-- Header SubText -->
    <TextView
        android:id="@+id/header_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/quran_translate_to_khmer"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?attr/colorOnSurface" />

    <!-- Theme Switch -->
    <Switch
        android:id="@+id/theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dark_mode"
        android:textColor="?attr/colorOnSurface" />

</LinearLayout>