<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent">

    <FrameLayout
        android:id="@+id/standardBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        >

        <!-- Wrap LinearLayout with MaterialCardView -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="36dp"
            app:cardElevation="0.5dp"
            app:strokeColor="?attr/colorOutline"
            app:strokeWidth="0.3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:background="?attr/colorSurfaceContainer">

            <!-- Drag Handle -->
            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                style="@style/Widget.Material3.BottomSheet.DragHandle"
                tools:ignore="MissingConstraints" />
            <!-- Copy Option -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/layoutCopy"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:text="@string/copy"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                app:icon="@drawable/ic_copy"
                app:iconPadding="16dp"
                app:iconTint="?attr/colorOnSurface" />

            <!-- Share Option -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/layoutShare"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:text="@string/share"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                app:icon="@drawable/ic_share"
                app:iconPadding="16dp"
                app:iconTint="?attr/colorOnSurface" />

            <!-- Add Bookmark Option -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/layoutBookmark"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:text="@string/add_bookmark"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                app:icon="@drawable/ic_bookmark_border"
                app:iconPadding="16dp"
                app:iconTint="?attr/colorOnSurface" />
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>